--- a/.github/workflows/terrateam.yml
+++ b/.github/workflows/terrateam.yml
@@ -9,16 +9,16 @@
 #
 # See https://terrateam.io/docs/configuration for details
 ##########################################################################
-name: 'Terrateam Workflow'
+name: "Terrateam Workflow"
 on:
   workflow_dispatch:
     inputs:
       # The work-token and api-base-url are automatically passed in by the Terrateam backend
       work-token:
-        description: 'Work Token'
+        description: "Work Token"
         required: true
       api-base-url:
-        description: 'API Base URL'
+        description: "API Base URL"
 jobs:
   terrateam:
     permissions: # Required to pass credentials to the Terrateam action
@@ -33,7 +33,34 @@ jobs:
         id: terrateam
         uses: terrateamio/action@v1 # Do not replace with a custom image. Doing so may cause Terrateam to not operate as intended.
         with:
-          work-token: '${{ github.event.inputs.work-token }}'
-          api-base-url: '${{ github.event.inputs.api-base-url }}'
+          work-token: "${{ github.event.inputs.work-token }}"
+          api-base-url: "${{ github.event.inputs.api-base-url }}"
         env:
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
+
+      - name: AWS CLI setup
+        run: apt-get update && apt-get install -y python3-pip && pip3 install awscli
+
+      - name: Configure AWS credentials
+        run: |
+          aws configure set aws_access_key_id ${{ steps.terrateam.outputs.aws-access-key-id }}
+          aws configure set aws_secret_access_key ${{ steps.terrateam.outputs.aws-secret-access-key }}
+          aws configure set default.region ${{ steps.terrateam.outputs.aws-region }}
+          curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
+          chmod +x ./kubectl
+          mv ./kubectl /usr/local/bin/kubectl
+        env:
+          AWS_ACCESS_KEY_ID: ${{ steps.terrateam.outputs.aws-access-key-id }}
+          AWS_SECRET_ACCESS_KEY: ${{ steps.terrateam.outputs.aws-secret-access-key }}
+          AWS_DEFAULT_REGION: ${{ steps.terrateam.outputs.aws-region }}
+
+      - name: Configure kubectl
+        run: |
+          aws eks update-kubeconfig --region ${{ steps.terrateam.outputs.aws-region }} --name ${{ steps.terrateam.outputs.cluster-name }}
+      - name: Run kubectl
+        run: |
+          kubectl apply -f mkdocs-ns.yml
+          kubectl apply -f deployment.yml -n mkdocs
+          kubectl apply -f service.yml -n mkdocs
+          sleep 120
+          kubectl get svc -n mkdocs
